Fixed None english type, update html code

--- a/fastapi/templates/home.html
+++ b/fastapi/templates/home.html
@@ -2,11 +2,41 @@
 <html>
   <head>
     <title>Home</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: url('https://wallpaperaccess.com/full/29815.jpg') no-repeat center center fixed;
+        background-size: cover;
+        margin: 0;
+        padding: 0;
+      }
+      h1 {
+        color: #000;
+        font-size: 36px;
+        margin-top: 50px;
+        text-align: center;
+      }
+      a {
+        color: #333;
+        font-size: 20px;
+        text-decoration: none;
+        display: block;
+        margin: 20px auto;
+        width: 200px;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0px 3px 5px #bbb;
+        text-align: center;
+      }
+      a:hover {
+        background-color: #eee;
+      }
+    </style>
   </head>
   <body>
     <h1>Home</h1>
     <a href="/media_api">API Media</a>
-    <br>
     <a href="/media">My Media</a>
   </body>
 </html>
